--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </head>
 <body class="bg-gradient-to-br from-love-50 to-love-200 h-screen w-screen flex flex-col justify-center items-center overflow-hidden font-sans select-none">
     
-    <div id="main-container" class="text-center transition-opacity duration-500 ease-in-out z-10 p-4">
-        <h1 id="question" class="text-3xl md:text-5xl font-bold text-love-600 mb-8 drop-shadow-sm animate-fade-in-down">
+    <div id="main-container" class="text-center transition-opacity duration-500 ease-in-out z-10 p-4 w-full">
+        <h1 id="question" class="text-2xl sm:text-3xl md:text-5xl font-bold text-love-600 mb-8 drop-shadow-sm animate-fade-in-down break-keep leading-snug">
             민경아 나의 발렌타인이 되어줄래?
         </h1>
         
