--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <div id="main-container" class="text-center transition-opacity duration-500 ease-in-out z-10 p-4 w-full">
         <h1 id="question" class="text-2xl sm:text-3xl md:text-5xl font-bold text-love-600 mb-8 drop-shadow-sm animate-fade-in-down break-keep leading-snug">
-            민경아 나의 발렌타인이 되어줄래?
+            민경아 나랑 발렌타인 함께해 줄래?
         </h1>
         
         <div class="flex justify-center items-center gap-6 md:gap-10 min-h-[100px] relative">
